Más traducciones para el body

--- a/principal/templates/miscellaneous/footer.html
+++ b/principal/templates/miscellaneous/footer.html
@@ -12,7 +12,7 @@
 				<p class="text-muted"><a href="/i18n/change_language?language=es">{% trans "Spanish" %}</a> | <a href="/i18n/change_language?language=en">{% trans "English" %}</a></p>
                 <p class="text-muted"><a href="/cookies_policy">{% trans "Cookies policy" %}</a> | <a href="/about_us">{% trans "About us" %}</a> | <a href="/privacy_terms">{% trans "Privacy terms" %}</a></p>
 				<p class="text-muted">Copyright &copy; BrainTravel 2015</p>
-				<img src="{% static "img/powered_fs.png" %}" alt="BrainTravel is powered by Foursquare"/>
+				<img src="{% static "img/powered_fs.png" %}" alt="{% trans "BrainTravel is powered by Foursquare" %}"/>
 			</div>
 		</div>
 	</div>
