--- a/principal/templates/my_visited_venues.html
+++ b/principal/templates/my_visited_venues.html
@@ -8,7 +8,7 @@
 		{% for venue in visited_venues %}
 			<div class="col-sm-3 col-xs-6 venue-details">
 	            <img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-	            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="Click here to view details">{{venue.name}}</a></h4>
+	            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans "Click here to view details" %}">{{venue.name}}</a></h4>
 			</div>
 		{% endfor %}
 	</div>
