--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -54,7 +54,7 @@
                 <span class="help-block with-errors"></span>
             </div>
 
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">{% trans "Login" %}</button>
         </form>
 	</div>
     
