--- a/principal/templates/assessment_list.html
+++ b/principal/templates/assessment_list.html
@@ -25,19 +25,22 @@
                 </div>
             </div>
         {% endfor %}
-        <div class="pagination col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <span class="step-links">
-                {% if assessments.has_previous %}
-                    <a href="?page={{ assessments.previous_page_number }}">previous</a>
-                {% endif %}
-                <span class="current">
-                    Page {{ assessments.number }} of {{ assessments.paginator.num_pages }}.
-                </span>
-                {% if assessments.has_next %}
-                    <a href="?page={{ assessments.next_page_number }}">next</a>
-                {% endif %}
-            </span>
-        </div>
+        
+    <nav class="col-xs-12">
+        <ul class="pager">
+            <li {% if not assessments.has_previous %} class="disabled"{% endif %}>
+                <a {% if assessments.has_previous %} href="?page={{ assessments.previous_page_number }}"{% endif %}><span aria-hidden="true">&laquo;</span></a>
+            </li>
+    
+            <li>
+              <span>{% trans "Page" %} {{ assessments.number }} {% trans "of" %} {{ assessments.paginator.num_pages }}</span>
+            </li>
+    
+            <li {% if not assessments.has_next %} class="disabled"{% endif %}>
+              <a {% if assessments.has_next %} href="?page={{ assessments.next_page_number }}"{% endif %}><span aria-hidden="true" class="disabled">&raquo;</span></a></li>
+        </ul>
+    </nav>
+
     {% endif %}
 </div>
 {%endblock%}
