--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -64,7 +64,7 @@
                         {% for venue in day.venues.all %} {% if not venue.is_food%}
                         <div class="col-sm-3 col-xs-6 venue-details">
                             <img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-                            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="Click here to view details">{{venue.name}}</a></h4>
+                            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans "Click here to view details" %}">{{venue.name}}</a></h4>
                             <a onclick="loadDataModalChangeVenue({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeVenueModal">
                             	<i class="fa fa-exchange"></i> {% trans "Change this" %}
                             </a>
@@ -80,7 +80,7 @@
                         <div class="col-sm-3 col-xs-6">
                             <img src="{{venue.photo}}"
                                 class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
-                            <h4><a href="/venue_details/{{ venue.id }}" >{{venue.name}}</a></h4>
+                            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans "Click here to view details" %}">{{venue.name}}</a></h4>
                             
                             <a onclick="loadDataModalChangeFood({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeFoodModal">
                                 <i class="fa fa-exchange"></i> {% trans "Change this" %}
@@ -139,12 +139,12 @@
             <div class="modal-content modal-bt">
                 <div class="modal-header text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="foodModal">Current Venue</h4>
+                    <h4 class="modal-title" id="foodModal">{% trans "Change Venue" %}</h4>
                 </div>
                 <div class="modal-body row">
                     <div class="col-sm-10 col-sm-offset-1">
                     	<div class="col-xs-12 text-center">
-                    	    <h3>Select the new venue</h3>
+                    	    <h3>{% trans "Select the new venue" %}</h3>
                             <img id="imageFoodToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
                             <h4 id="nameCurrentFood">Name</h4>
                         </div>
@@ -156,7 +156,7 @@
                         	<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
 	                        
 	                        <div class="form-group">
-		                        <select id="selectNewFood" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="Choose a new venue...">
+		                        <select id="selectNewFood" name="newVenue" style="display:none;" tabindex="-1" class="chosen-select" data-placeholder="{% trans "Choose a new venue..." %}">
 		                        	<option></option>
 		                        	{% for v in trip.possible_venues.all %}
 		                        		{% if v.is_food %}
@@ -166,7 +166,7 @@
 		                        </select>
 		                    </div>
 		                    
-	                        <button class="btn btn-primary btn-block" type="submit">Change!</button>
+	                        <button class="btn btn-primary btn-block" type="submit">{% trans "Change" %}</button>
 						</form>
                         
                     </div>
