--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -9,22 +9,22 @@
         <p>{% trans "Oops! BrainTravel could not find anything..." %}</p>
     {% else %}
         {% for trip in trips %}
-            <div class="well animated col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <div class="well animated col-xs-12">
                 <div class="media">
                     <div class="row">
-                        <div class="text-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <div class="text-center col-xs-12">
                             <h2>{{trip.name}}</h2>
                         </div>
-                        <div class="text-right-center col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <div class="text-right-center col-xs-12">
                             <p><i class="fa fa-globe fa-1x"></i> {{trip.city|safe}} ({{trip.country|safe}})</p>
                         </div>
-                        <div class="text-justify col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <div class="text-justify col-xs-12">
                             <p>{{trip.publishedDescription|safe|truncatechars:350}}</p>
                         </div>
                         <div class="text-left-center col-xs-12 col-sm-12 col-md-5 col-lg-5">
                             <p><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</p>
                         </div>
-                        <div class="text-right-center col-xs-12 col-sm-12 col-md-offset-0 col-md-7 col-lg-offset-1 col-lg-6">
+                        <div class="text-right-center col-xs-12 col-sm-12 col-md-7 col-lg-offset-1 col-lg-6">
                             <ul class="list-inline list-unstyled">
                                 <li> {{trip.get_state_display}}</li>
                                 <li>|</li>
