Vista de venues visitados rediseñada.

--- a/principal/templates/my_visited_venues.html
+++ b/principal/templates/my_visited_venues.html
@@ -1,19 +1,22 @@
 {% extends 'base.html' %}
-{% block title %} Statistics {% endblock %}
-{% load i18n %} {% block content %}{% load staticfiles %}
+{% load i18n %}
+{% block title %} {% trans "Visited venues" %} {% endblock %}
+ {% block content %}{% load staticfiles %}
+
 
 <div class="container">
-	<div class="col-xs-12 col-sm-6">
-		<h3>{% trans "Visited venues" %}</h3>
-        {% if not visited_venues %}
-            <p>{% trans "Oops! BrainTravel could not find anything..." %}</p>
-        {% else %}
+    <h1>{% trans "Visited venues" %}</h1>
+	<div class="row visited-venues">		
 		{% for venue in visited_venues %}
-			<div class="col-sm-3 col-xs-6 venue-details">
+			<div class="col-sm-3 col-xs-6 venue-details text-center">
 	            <img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
 	            <h4><a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans "Click here to view details" %}">{{venue.name}}</a></h4>
 			</div>
+	    {% empty %}
+	       <p>{% trans "Oops! BrainTravel could not find anything..." %}</p>
 		{% endfor %}
+	</div>
+	
         <nav class="col-xs-12">
             <ul class="pager">
                 <li {% if not visited_venues.has_previous %} class="disabled" {% endif %}>
@@ -27,7 +30,13 @@
                 </li>
             </ul>
         </nav>
-        {% endif %}
-	</div>
 </div>
+
+
+
+<script type="text/javascript">
+    $(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
 {% endblock %}
