--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
                             <div class="media-body">
-                                <h4>{% trans "Useful trips" %}</h4>
+                                <h4>{% trans "Useful tips" %}</h4>
                                     {% for trip in trips %}
                                     <div class="row">
                                         <div class="col-sm-1 hidden-xs">
