-Nuevas traducciones añadidas -El alert para el aviso del email, ahora redirecciona a la pagina principal

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -163,18 +163,15 @@
                 acceptText: '{% trans "I understand" %}',
                 policyButton : true,
                 declineButton: true,
-                declineText: '{% trans "Disalbe Cookies" %}'
+                declineText: '{% trans "Disable Cookies" %}'
             });
         });
 
-		$("#js-rotating").Morphext({
+        $("#js-rotating").Morphext({
 			animation : "fadeIn",
 			separator : ";",
 			speed : 6000
 		});
-
-	
-		
 	</script>
 
 </body>
