--- a/principal/templates/miscellaneous/menu.html
+++ b/principal/templates/miscellaneous/menu.html
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a data-toggle="collapse" href="#searchCollapse" id="search-toggle">
-                        <span class="fa fa-search"></span>
+                        <span id="search_nav" class="fa fa-search"></span>
                         <strong>{% trans "Search"%}</strong>
                     </a>
                 </li>
