--- a/principal/templates/privacy_terms_en.html
+++ b/principal/templates/privacy_terms_en.html
@@ -29,7 +29,7 @@
 				December on Protection of Personal Data, you are entitled to access
 				this information , rectify it if the data is wrong and unsubscribe
 				by a file written request to: Attention LOPD , BrainTravel Co. ,
-				Inc. , C / Madrid, 1-41200 Acalá del Río (Sevilla) Spain or by
+				Inc. , C / Madrid, 1-41200 (Sevilla) Spain or by
 				sending the request to the e-mail address to be
 				clientes.braintravel@gmail.com assisted and guided to complete the
 				process , fulfilling the notification provided for in Article 5.4 of
