--- a/principal/templates/privacy_terms_es.html
+++ b/principal/templates/privacy_terms_es.html
@@ -27,7 +27,7 @@
             <p>De conformidad con el art&iacuteculo 5 de la Ley 15/1999, de 13 de diciembre de Protecci&oacuten de Datos de
                 Car&aacutecter Personal, Ud. tiene derecho a acceder a esta informaci&oacuten, a rectificarla si los datos son
                 err&oacuteneos y darse de baja del fichero mediante una solicitud escrita a: Atenci&oacuten LOPD, BrainTravel
-                Co., Inc., C/ Madrid, 1 - 41200 (Sevilla) España, o bien, enviando dicha solicitud a la direcci&oacuten de
+                Co., Inc., C/ Madrid, 1 - 41200 (Sevilla) Espa&ntildea, o bien, enviando dicha solicitud a la direcci&oacuten de
                 correo electr&oacutenico </a>clientes.braintravel@gmail.com <span class="p">para ser atendido y guiado para
                 cumplimentar el proceso, cumpli&eacutendose as&iacute la notificaci&oacuten prevista en el art&iacuteculo 5.4 de la
                 misma.</span></p>
