--- a/principal/templates/trip_edit.html
+++ b/principal/templates/trip_edit.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
+{% block title %} {% trans "Create trip" %} {% endblock %}
 {% load staticfiles %}
 {% block extrahead %}
 <link rel="stylesheet" href="{% static "css/summernote.css" %}">
