Bugfix producción: Ahora los usuarios no pueden dar Feedback de lugares que no hayan visitado.

--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -12,7 +12,9 @@
                         <div class="col-md-2 col-sm-3 col-lg-2 col-xs-12 text-center">
                             <img class="img-rounded" style="width: 150px;" src="{{venue.photo}}">
                             <h4 class="media-heading" style="margin-top: 14px;">{{venue.name}}</h4>
-                            <a style="margin-top: 10px;" type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">{% trans "Give feedback" %}</a>
+                            {% if is_visited %}
+                            	<a style="margin-top: 10px;" type="button" class="btn btn-primary btn-md" data-toggle="modal" data-target="#myModal">{% trans "Give feedback" %}</a>
+                            {% endif %}
                         </div>
                         <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
                             <div class="media-body">
