--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="text-right-center col-xs-12 col-sm-12 col-md-7 col-lg-offset-1 col-lg-6">
                             <ul class="list-inline list-unstyled">
-                                <li> {{trip.get_state_display}}</li>
+                                <li> {% trans trip.get_state_display %}</li>
                                 <li>|</li>
                                 <li> {{trip.comment_set.all.count}} <i class="fa fa-comments"></i></li>
                                 <li>|</li>
