Mas traducciones arregladas

--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -86,7 +86,7 @@
 		                                    <div class="input-group-addon">
 		                                        <span class="fa fa-envelope"></span>
 		                                    </div>
-		                                    <input type="email" id="email" name="email" class="form-control" data-error="Invalid email address" placeholder="{% trans "email address" %}" required="required" />
+		                                    <input type="email" id="email" name="email" class="form-control" data-error={% trans "Invalid email address" %} placeholder="{% trans "email address" %}" required="required" />
 		                                </div>
 		                                <span class="help-block with-errors"></span>
 		                            </div>
