--- a/principal/templates/trip_list.html
+++ b/principal/templates/trip_list.html
@@ -21,6 +21,7 @@
                         <div class="text-justify col-xs-12">
                             <p>{{trip.publishedDescription|safe|truncatechars:350}}</p>
                         </div>
+                        <div class="clearfix"></div>
                         <div class="text-left-center col-xs-12 col-sm-12 col-md-5 col-lg-5">
                             <p><i class="fa fa-calendar"></i> {{trip.startDate}} - {{trip.endDate}}</p>
                         </div>
