--- a/principal/templates/my_payments.html
+++ b/principal/templates/my_payments.html
@@ -32,7 +32,7 @@
 		                <td>{{ payment.date|date:"d/m/Y"|safe }}</td>
 		                
 		                {% if  payment.coinhistory %}
-		                	<td>{{ payment.coinhistory.concept|safe }}</td>
+		                	<td>{% trans payment.coinhistory.concept %}</td>
 		                {% else %}
 		                	<td>{% trans "Pruchase coins" %}</td>
 		                {% endif %}
