--- a/principal/templates/list_coin_history.html
+++ b/principal/templates/list_coin_history.html
@@ -31,7 +31,7 @@
 		            <tr>
 		                <td>{{ coin_history.amount|safe }}</td>
 		                <td>{{ coin_history.date|date:"d/m/Y"|safe }}</td>
-		                <td>{{ coin_history.trip.day_set.count }} {% if coin_history.trip.day_set.count > 1 %}{% trans "days in"%} {% else %} {% trans "day in"%} {{ coin_history.trip.day_set.count }}</td>
+		                <td>{{ coin_history.trip.day_set.count }} {% if coin_history.trip.day_set.count > 1 %}{% trans "days in"%} {% else %} {% trans "day in"%} {% endif %}{{ coin_history.trip.city }}, {{ coin_history.trip.country }}</td>
 		            </tr>
 		        {% endfor %}
 		        </tbody>
