Imagen de fondo del perfil reducida.

--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -9,7 +9,7 @@
 
 <div class="container">
     <div class="fb-profile">
-        <img align="left" class="fb-image-lg" src="/static/img/bg_profile.png" alt="{% trans "Profile image" %}"/>
+        <img align="left" class="fb-image-lg" src="/static/img/bg_profile.jpg" alt="{% trans "Profile image" %}"/>
         <img align="left" class="fb-image-profile thumbnail img-circle" src="/{{traveller.photo}}" alt="{{traveller.first_name}}"/>
         <div class="fb-profile-text">
             <div class="row">
