--- a/principal/templates/venue_details.html
+++ b/principal/templates/venue_details.html
@@ -19,7 +19,7 @@
                         <div class="col-md-10 col-sm-9 col-lg-10 col-xs-12">
                             <div class="media-body">
                                 <h4>{% trans "Useful tips" %}</h4>
-                                    {% for trip in trips %}
+                                    {% for trip, can_vote in tips_dict.items%}
                                     <div class="row">
                                         <div class="col-sm-1 hidden-xs">
                                             <img class="img-responsive img-circle user-photo" src="/{{ trip.traveller.photo }}">
@@ -33,9 +33,9 @@
                                                 <div class="panel-body">
                                                     {{ trip.description }}
                                                 </div><!-- /panel-body -->
-                                                {% if user.id != trip.traveller.id %}
+                                                {% if user.id != trip.traveller.id and can_vote %}
                                                 <div class="panel-footer">
-                                                    <a  type="button" class="btn btn-primary btn-success btn-sm" href="/venue_details/value_trip/{{ trip.venues.id }}/{{ trip.id }}">{% trans "This is useful" %}</a>
+                                                    <a  type="button" class="btn btn-primary btn-success btn-sm" href="/venue_details/value_tip/{{ trip.venues.id }}/{{ trip.id }}">{% trans "This is useful" %}</a>
                                                 </div>
                                                 {% endif %}
                                             </div><!-- /panel panel-default -->
