Solucion a: - Intento comentar un viaje que está en borradores o pendiente y me lleva   a la pagina de que ha ocurrido un error

--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
             <div class="timeline-centered">
-                {% if not perms.principal.administrator and not user.is_anonymous %}
+                {% if perms.principal.traveller and  trip.state == 'ap' %}
                     <article class="timeline-entry entry">
                         <div class="timeline-entry-inner">
                             <div class="timeline-icon">
