Solucion a: - En la vista de estadisticas tampoco se esta cotando la salida de la   descripcion del viaje

--- a/principal/templates/stats.html
+++ b/principal/templates/stats.html
@@ -66,7 +66,7 @@
 						  	</div>
 						  	<div class="media-body" style="vertical-align: middle;">
 						    	<h4 class="media-heading">{{forloop.counter}}. <a href="/venue_details/{{feedback.venues.id}}">{{feedback.venues.name}}</a></h4>
-						    	<b>{% trans "Description" %}</b>: {{feedback.description}}
+						    	<b>{% trans "Description" %}</b>: {{feedback.description|safe|truncatechars:100}}
 						  	</div>
 						</div>
 		    		{% endfor %}
@@ -86,7 +86,7 @@
 						  	<div class="media-body" style="vertical-align: middle;">
 						  		<h4 class="media-heading">{{forloop.counter}}. <a href="/public_trip_details/{{public_trip.id}}">{{public_trip.name}}</a></h4>
 							    <div>{% trans "Number of likes" %}: {{public_trip.num_likes}}</div>
-							    <p class="truncate"> <b>{% trans "Description: " %}</b> {{public_trip.publishedDescription|safe}}</p>
+							    <p> <b>{% trans "Description: " %}</b> {{public_trip.publishedDescription|safe|truncatechars:100}}</p>
 						  	</div>
 			    		</div>
 		    		{% endfor %}
