--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -1,43 +1,19 @@
-{% extends 'base.html' %} {% load i18n %} {% block title %} {% trans
-"Plan details" %} {% endblock %} {% load staticfiles %} {% block
-extrahead %}
-<script type="text/javascript"
-	src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB2Ejc7OmM9YxiWGvUqBrx3sKPKedF-IA8&sensor=false"></script>
-{% endblock %} {% block content %}
+{% extends 'base.html' %} 
+{% load i18n %} 
+{% load staticfiles %} 
+{% block title %} {% trans "Plan details" %} {% endblock %}
+{% block extrahead %}
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB2Ejc7OmM9YxiWGvUqBrx3sKPKedF-IA8&sensor=false"></script>
+{% endblock %} 
+{% block content %}
 <div class="container">
-	<!-- <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner" role="listbox">
-                {% for day in trip.day_set.all %}
-                    {% for venue in day.venues.all %}
-                        <div class="item {% if forloop.first %}active{% endif %}">
-                            <img alt="{{venue.name}}" src="{{venue.photo}}" class="img-venue-carousel"/>
-                            <div class="carousel-caption">
-                               <h4>{{venue.name}}</h4>
-                            </div>
-                        </div>
-                    {% endfor %}
-                {% endfor %}
-            </div>
 
-          Controls
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-         -->
 	<h1>{% trans "Trip details" %}</h1>
 	<div class="row">
 		<div id="map" class="plan-map"></div>
 	</div>
-	<h2>{{trip.day_set.count}} {% trans "days in" %} {{trip.city}},
-		{{trip.country}}</h2>
-	<p>{% trans "Click on the day indicator to show te corresponding
-		plan" %}</p>
+	<h2>{{trip.day_set.count}} {% trans "days in" %} {{trip.city}}, {{trip.country}}</h2>
+	<p>{% trans "Click on the day indicator to show te corresponding plan" %}</p>
 	<div class="visible-xs">
 		<p>{% trans "Click on the venue names to view its details." %}</p>
 	</div>
@@ -48,61 +24,47 @@ extrahead %}
 			class="panel panel-{% cycle 'primary' 'success' 'info' 'warning' 'danger' %}">
 			<div class="panel-heading" role="tab" id="heading{{day.numberDay}}">
 				<h4 class="panel-title">
-					<a class="day-switcher" data-toggle="collapse"
-						data-parent="#accordion" href="#collapse{{day.numberDay}}"
-						aria-expanded="true" aria-controls="collapse{{day.numberDay}}">{%
-						trans "Day" %} {{day.numberDay}}</a>
+					<a class="day-switcher" data-toggle="collapse" data-parent="#accordion" href="#collapse{{day.numberDay}}" aria-expanded="true" aria-controls="collapse{{day.numberDay}}">{% trans "Day" %} {{day.numberDay}}</a>
 				</h4>
 			</div>
-			<div id="collapse{{day.numberDay}}"
-				class="panel-collapse collapse {% if forloop.first %}in{% endif %}"
-				role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
+			<div id="collapse{{day.numberDay}}" class="panel-collapse collapse {% if forloop.first %}in{% endif %}" role="tabpanel" aria-labelledby="headin{{day.numberDay}}">
 				<div class="panel-body">
 					<h3>
-						<i class="fa fa-map-marker"></i> {% trans "Those are the venues
-						that we suggest to visit on day " %}{{day.numberDay}}
+						<i class="fa fa-map-marker"></i> {% trans "Those are the venues that we suggest to visit on day " %}{{day.numberDay}}
 					</h3>
 					<div class="row text-center">
-						{% for venue in day.venues.all %} {% if not venue.is_food%}
-						<div class="col-sm-3 col-xs-6 venue-details">
-							<img src="{{venue.photo}}"
-								class="img-responsive img-thumbnail img-venue"
-								onerror="this.src='{% static "img/no-image.png" %}'">
-							<h4>
-								<a href="/venue_details/{{ venue.id }}" data-toggle="tooltip"
-									data-placement="bottom" title="{% trans " Click here to viewdetails" %}">{{venue.name}}</a>
-							</h4>
-							<a onclick="loadDataModalChangeVenue({{venue.id}}, {{day.id}});"
-								id="changeVenue" href="" data-toggle="modal"
-								data-target="#changeVenueModal"> <i class="fa fa-exchange"></i>
-								{% trans "Change this" %}
-							</a>
-						</div>
-						{% endif %} {% endfor %}
+						{% for venue in day.venues.all %} 
+						  {% if not venue.is_food%}
+							<div class="col-sm-3 col-xs-6 venue-details">
+								<img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+								<h4>
+									<a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans " Click here to viewdetails" %}">{{venue.name}}</a>
+								</h4>
+								<a onclick="loadDataModalChangeVenue({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeVenueModal"> <i class="fa fa-exchange"></i> {% trans "Change this" %}
+								</a>
+							</div>
+						{% endif %} 
+						{% endfor %}
 					</div>
 
 					<h3>
-						<i class="fa fa-cutlery"></i> {% trans "Those are the places where
-						we suggest you to eat on day " %}{{day.numberDay}}
+						<i class="fa fa-cutlery"></i> {% trans "Those are the places where we suggest you to eat on day " %}{{day.numberDay}}
 					</h3>
 					<div class="row text-center">
-						{% for venue in day.venues.all %} {% if venue.is_food %}
-						<div class="col-sm-3 col-xs-6">
-							<img src="{{venue.photo}}"
-								class="img-responsive img-thumbnail img-venue"
-								onerror="this.src='{% static "img/no-image.png" %}'">
-							<h4>
-								<a href="/venue_details/{{ venue.id }}" data-toggle="tooltip"
-									data-placement="bottom" title="{% trans " Click here to viewdetails" %}">{{venue.name}}</a>
-							</h4>
-
-							<a onclick="loadDataModalChangeFood({{venue.id}}, {{day.id}});"
-								id="changeVenue" href="" data-toggle="modal"
-								data-target="#changeFoodModal"> <i class="fa fa-exchange"></i>
-								{% trans "Change this" %}
-							</a>
-						</div>
-						{% endif %} {% endfor %}
+						{% for venue in day.venues.all %} 
+							{% if venue.is_food %}
+							<div class="col-sm-3 col-xs-6">
+								<img src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
+								<h4>
+									<a href="/venue_details/{{ venue.id }}" data-toggle="tooltip" data-placement="bottom" title="{% trans " Click here to viewdetails" %}">{{venue.name}}</a>
+								</h4>
+	
+								<a onclick="loadDataModalChangeFood({{venue.id}}, {{day.id}});" id="changeVenue" href="" data-toggle="modal" data-target="#changeFoodModal"> <i class="fa fa-exchange"></i>
+									{% trans "Change this" %}
+								</a>
+							</div>
+							{% endif %} {
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -115,41 +77,37 @@ extrahead %}
 		<div class="modal-dialog">
 			<div class="modal-content modal-bt">
 				<div class="modal-header text-center">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title" id="myModalLabel">{% trans "Change
-						venue" %}</h4>
+					<h4 class="modal-title" id="myModalLabel">{% trans "Change venue" %}</h4>
 				</div>
 				<div class="modal-body row">
 					<div class="col-sm-10 col-sm-offset-1">
 						<div class="col-xs-12 text-center">
 							<h3>{% trans "Select the new venue" %}</h3>
-							<img id="imageVenueToChange" src="{{venue.photo}}"
-								class="img-responsive img-thumbnail img-venue"
-								onerror="this.src='{% static "img/no-image.png" %}'">
+							<img id="imageVenueToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
 							<h4 id="nameCurrentVenue">{% trans "Name" %}</h4>
 						</div>
 
 						<form action="/planner/change_venue/" method="POST">
-							{% csrf_token %} <input type="hidden" id="oldVenue"
-								name="oldVenue" value="" /> <input type="hidden" id="dayVenue"
-								name="day" value="" /> <input type="hidden" id="trip"
-								name="trip" value="{{trip.id}}" />
+							{% csrf_token %} 
+							<input type="hidden" id="oldVenue" name="oldVenue" value="" /> 
+							<input type="hidden" id="dayVenue" name="day" value="" /> 
+							<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
 
 							<div class="form-group">
-								<select id="selectNewVenue" name="newVenue" tabindex="-1"
-									class="chosen-select" data-placeholder="{% trans " Choose a newvenue..."%}">
-									<option></option> {% for v in trip.possible_venues.all %} {% if
-									not v.is_food %}
-									<option value="{{v.id}}">{{v.name}}</option> {% endif %}
+								<select id="selectNewVenue" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a newvenue..."%}">
+									<option></option> 
+									{% for v in trip.possible_venues.all %} 
+									   {% if not v.is_food %}
+									       <option value="{{v.id}}">{{v.name}}</option> 
+									   {% endif %}
 									{%endfor%}
 								</select>
 							</div>
 
-							<button class="btn btn-primary btn-block">{% trans
-								"Change" %}</button>
+							<button class="btn btn-primary btn-block">{% trans "Change" %}</button>
 						</form>
 					</div>
 				</div>
@@ -162,41 +120,37 @@ extrahead %}
 		<div class="modal-dialog">
 			<div class="modal-content modal-bt">
 				<div class="modal-header text-center">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h4 class="modal-title" id="foodModal">{% trans "Change Venue"
-						%}</h4>
+					<h4 class="modal-title" id="foodModal">{% trans "Change Venue" %}</h4>
 				</div>
 				<div class="modal-body row">
 					<div class="col-sm-10 col-sm-offset-1">
 						<div class="col-xs-12 text-center">
 							<h3>{% trans "Select the new venue" %}</h3>
-							<img id="imageFoodToChange" src="{{venue.photo}}"
-								class="img-responsive img-thumbnail img-venue"
-								onerror="this.src='{% static "img/no-image.png" %}'">
+							<img id="imageFoodToChange" src="{{venue.photo}}" class="img-responsive img-thumbnail img-venue" onerror="this.src='{% static "img/no-image.png" %}'">
 							<h4 id="nameCurrentFood">Name</h4>
 						</div>
 
 						<form action="/planner/change_venue/" method="POST">
-							{% csrf_token %} <input type="hidden" id="oldFood"
-								name="oldVenue" value="" /> <input type="hidden" id="dayFood"
-								name="day" value="" /> <input type="hidden" id="trip"
-								name="trip" value="{{trip.id}}" />
+							{% csrf_token %} 
+							<input type="hidden" id="oldFood" name="oldVenue" value="" /> 
+							<input type="hidden" id="dayFood" name="day" value="" /> 
+							<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
 
 							<div class="form-group">
-								<select id="selectNewFood" name="newVenue" tabindex="-1"
-									class="chosen-select" data-placeholder="{% trans " Choose a newvenue..." %}">
-									<option></option> {% for v in trip.possible_venues.all %} {% if
-									v.is_food %}
-									<option value="{{v.id}}">{{v.name}}</option> {% endif %} {%
-									endfor %}
+								<select id="selectNewFood" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a newvenue..." %}">
+									<option></option> 
+									{% for v in trip.possible_venues.all %} 
+									   {% if v.is_food %}
+									       <option value="{{v.id}}">{{v.name}}</option> 
+									   {% endif %} 
+									{% endfor %}
 								</select>
 							</div>
 
-							<button class="btn btn-primary btn-block" type="submit">{%
-								trans "Change" %}</button>
+							<button class="btn btn-primary btn-block" type="submit">{% trans "Change" %}</button>
 						</form>
 
 					</div>
