--- a/principal/templates/show_planning.html
+++ b/principal/templates/show_planning.html
@@ -63,7 +63,7 @@
 									{% trans "Change this" %}
 								</a>
 							</div>
-							{% endif %} {
+							{% endif %} 
 						{% endfor %}
 					</div>
 				</div>
@@ -97,7 +97,7 @@
 							<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
 
 							<div class="form-group">
-								<select id="selectNewVenue" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a newvenue..."%}">
+								<select id="selectNewVenue" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a new venue..."%}">
 									<option></option> 
 									{% for v in trip.possible_venues.all %} 
 									   {% if not v.is_food %}
@@ -140,7 +140,7 @@
 							<input type="hidden" id="trip" name="trip" value="{{trip.id}}" />
 
 							<div class="form-group">
-								<select id="selectNewFood" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a newvenue..." %}">
+								<select id="selectNewFood" name="newVenue" tabindex="-1" class="chosen-select" data-placeholder="{% trans " Choose a new venue..." %}">
 									<option></option> 
 									{% for v in trip.possible_venues.all %} 
 									   {% if v.is_food %}
